# zero2prod

./: .env  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-b5e59099fad1df9ca053007245e2a65f12122cc4d80e70b1512ae3b2b9a0d962.json
configuration/: base.yaml
migrations/: 20240110173806_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
